syntax = "proto3";
package pb;

import "vendor/github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package                           = "pb";
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all)      = false;
option (gogoproto.goproto_sizecache_all)    = false;

message C2SPackage {
    uint64 UserID = 1;
    bytes Body = 2;
}

message S2CPackage {
    uint64 UserID = 1;
    bytes Body = 2;
}